[package]
name = "cow-cards-rs"
description = "Playing cards"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["shadowcow84@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[lib]
name = "cow_cards_rs"